odb: Replace CDL <> (normal and escaped) to [] to match master term name when exporting CDL file.
Signed-off-by: Christian COSTA <christian.costa@st.com>

--- a/src/odb/test/CMakeLists.txt
+++ b/src/odb/test/CMakeLists.txt
@@ -51,6 +51,7 @@ or_integration_tests(
     smash_vias
     transform
     wire_encoder
+    write_cdl
     write_def58
     write_def58_gzip
     write_lef_and_def
