--- a/src/odb/test/BUILD
+++ b/src/odb/test/BUILD
@@ -191,6 +191,7 @@ COMPULSORY_TESTS = [
     "smash_vias",
     "transform",
     "wire_encoder",
+    "write_cdl",
     "write_def58",
     "write_def58_gzip",
     "write_lef_and_def",
